# gosxcli

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  analyze_document.py  deep_analysis.py  extract_docx.py  format_styles.py  pyproject.toml  state.md
.opencode/: opencode.json
.specify/: feature.json
benchmarks/: README.md  compare.py  test_benchmarks.py  test_compare.py
docs/: DOD.md  architecture.md  roadmap.md
examples/: minimal.typ
fixtures/: query_test.typ  reference_validation.typ
scripts/: generate_golden.py
template/: content_types.xml  document.xml  document.xml.rels  document_analysis.txt  footer1.xml  formatted_styles.txt  numbering.xml  settings.xml  styles.xml
tests/: test_chapter_aware_refs.py  test_cli_validation.py  test_cross_ref_resolution.py  test_equations.py  test_extractor_v2.py  test_inline_links.py  test_inline_parsing.py  test_inline_rendering.py  test_lists_and_math.py  test_multifile.py  test_nested_tables.py  test_outline.py  test_refs.py  test_smoke.py  test_table_attributes.py  test_tables.py  test_v01_compatibility.py  test_validator.py
tmp-test/: component_pipeline.drawio  er_ir_model.drawio  fig_fad_macro_convert.drawio  fig_fad_macro_install.drawio  fig_fad_micro_parse.drawio  fig_fad_micro_write.drawio  fig_fad_top_level.drawio  fig_traceability_gosxcli.drawio  fig_usecase_gosxcli.drawio  flowchart_conversion.drawio  sequence_convert.drawio  spec_fad_macro_convert.json  spec_fad_macro_install.json  spec_fad_micro_parse.json  spec_fad_micro_write.json  spec_fad_top_level.json  spec_traceability_gosxcli.json  (+4 more)
(+139 files in other folders)
